--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #87CEFA; /* כחול בהיר */
+            background-color: #87CEEB; /* צבע רקע כחול */
             margin: 0;
             padding: 20px;
         }
         .container {
             max-width: 400px;
             margin: 20px auto;
-            background: #fff;
+            background: #ffffff;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
         h1 {
-            color: #333;
+            color: #ffffff;
         }
         .question {
             font-size: 24px;
@@ -52,7 +52,7 @@
             font-weight: bold;
         }
         img {
-            width: 100px;
+            width: 120px;
             margin: 10px 0;
         }
     </style>
@@ -112,6 +112,7 @@
     </script>
 </body>
 </html>
+
 
 
 
