--- a/index.html
+++ b/index.html
@@ -8,65 +8,75 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #87CEEB; /* צבע רקע כחול */
+            background: linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet); /* רקע בצבעי הקשת */
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            color: white;
         }
         .container {
-            max-width: 400px;
-            margin: 20px auto;
-            background: #ffffff;
+            background: rgba(255, 255, 255, 0.8); /* רקע לבן שקוף */
+            border-radius: 15px;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
         h1 {
-            color: #ffffff;
+            margin-bottom: 20px;
         }
         .question {
             font-size: 24px;
             margin-bottom: 15px;
+            color: #333;
         }
         input[type="number"] {
             font-size: 18px;
             padding: 5px;
             width: 100px;
             text-align: center;
+            margin-bottom: 15px;
         }
         button {
             font-size: 18px;
             padding: 10px 20px;
             margin: 10px 5px;
-            background-color: #4caf50;
+            background-color: #ff69b4;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #ff1493;
         }
         .result {
             margin-top: 20px;
             font-size: 20px;
             font-weight: bold;
+            color: #333;
         }
         img {
-            width: 120px;
+            width: 100px;
             margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <h1>משחק חיבור וחיסור</h1>
-    <img src="https://i.imgur.com/1NglNpG.png" alt="סטיץ'">
+    <img src="https://i.imgur.com/eJgX2ft.png" alt="חד קרן">
     <div class="container">
         <div class="question" id="question"></div>
         <input type="number" id="answer" placeholder="תשובה">
+        <br>
         <button onclick="checkAnswer()">בדוק תשובה</button>
         <div class="result" id="result"></div>
     </div>
-    <img src="https://i.imgur.com/1NglNpG.png" alt="סטיץ'">
+    <img src="https://i.imgur.com/eJgX2ft.png" alt="חד קרן">
     <script>
         let num1, num2, operation, correctAnswer;
 
@@ -112,6 +122,7 @@
     </script>
 </body>
 </html>
+
 
 
 
