--- a/index.html
+++ b/index.html
@@ -21,46 +21,48 @@
         .container {
             background: rgba(255, 255, 255, 0.8); /* רקע לבן שקוף */
             border-radius: 15px;
-            padding: 20px;
-            max-width: 400px;
+            padding: 40px;
+            max-width: 500px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
         h1 {
-            margin-bottom: 20px;
+            font-size: 3rem;
+            margin-bottom: 30px;
         }
         .question {
-            font-size: 24px;
-            margin-bottom: 15px;
+            font-size: 2.5rem;
+            margin-bottom: 30px;
             color: #333;
         }
         .answers {
             display: flex;
             justify-content: space-around;
-            margin-top: 15px;
+            margin-top: 30px;
         }
         .answers button {
-            font-size: 18px;
-            padding: 10px 20px;
+            font-size: 2rem;
+            padding: 20px 40px;
             background-color: #ff69b4;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
             transition: all 0.2s ease;
         }
         .answers button:hover {
             background-color: #ff1493;
+            transform: scale(1.1);
         }
         .result {
-            margin-top: 20px;
-            font-size: 20px;
+            margin-top: 30px;
+            font-size: 2rem;
             font-weight: bold;
             color: #333;
         }
         img {
-            width: 100px;
-            margin: 10px 0;
+            width: 150px;
+            margin: 20px 0;
         }
     </style>
 </head>
@@ -138,6 +140,7 @@
     </script>
 </body>
 </html>
+
 
 
 
