--- a/index.html
+++ b/index.html
@@ -19,36 +19,39 @@
             color: white;
         }
         .container {
-            background: rgba(255, 255, 255, 0.8); /* רקע לבן שקוף */
-            border-radius: 15px;
-            padding: 40px;
-            max-width: 500px;
+            background: rgba(255, 255, 255, 0.9); /* רקע לבן שקוף */
+            border-radius: 20px;
+            padding: 30px;
+            max-width: 600px;
             text-align: center;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
         h1 {
-            font-size: 3rem;
             margin-bottom: 30px;
+            font-size: 3rem;
+            color: white;
         }
         .question {
             font-size: 2.5rem;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             color: #333;
         }
         .answers {
             display: flex;
             justify-content: space-around;
-            margin-top: 30px;
+            margin-top: 20px;
+            flex-wrap: wrap;
         }
         .answers button {
             font-size: 2rem;
-            padding: 20px 40px;
+            padding: 20px;
+            margin: 10px;
             background-color: #ff69b4;
             color: white;
             border: none;
             border-radius: 10px;
             cursor: pointer;
-            transition: all 0.2s ease;
+            transition: all 0.3s ease;
         }
         .answers button:hover {
             background-color: #ff1493;
@@ -133,13 +136,14 @@
                 resultDiv.style.color = 'red';
             }
 
-            setTimeout(generateQuestion, 2000); // שאלה חדשה אחרי 2 שניות
+            setTimeout(generateQuestion, 3000); // שאלה חדשה אחרי 3 שניות
         }
 
         generateQuestion(); // יוצרים שאלה ראשונה
     </script>
 </body>
 </html>
+
 
 
 
