--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             width: 200px;
             margin-top: 20px;
         }
+        #cheer-message {
+            font-size: 2rem;
+            color: green;
+            display: none;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -82,9 +88,10 @@
         <div class="answers" id="answers"></div>
         <div class="result" id="result"></div>
         <img id="unicorn-celebration" src="https://i.imgur.com/eJgX2ft.png" alt="חגיגת חד קרן">
+        <div id="cheer-message">כל הכבוד! תמשיכי ככה, אלופה שלי! 🦄✨</div>
     </div>
 
-    <!-- קובץ אודיו של מחיאות כפיים -->
+    <!-- קובץ אודיו של מחיאות כפיים וקריאות עידוד -->
     <audio id="clap-sound" src="https://www.soundjay.com/human/applause-01.mp3"></audio>
 
     <script>
@@ -92,7 +99,9 @@
 
         function generateQuestion() {
             const unicornImage = document.getElementById('unicorn-celebration');
+            const cheerMessage = document.getElementById('cheer-message');
             unicornImage.style.display = 'none'; // מסתירים את חד הקרן בתחילת שאלה חדשה
+            cheerMessage.style.display = 'none'; // מסתירים את ההודעה
 
             do {
                 num1 = Math.floor(Math.random() * 6); // מספר בין 0 ל-5
@@ -141,6 +150,7 @@
             const resultDiv = document.getElementById('result');
             const clapSound = document.getElementById('clap-sound');
             const unicornImage = document.getElementById('unicorn-celebration');
+            const cheerMessage = document.getElementById('cheer-message');
 
             if (selectedAnswer === correctAnswer) {
                 resultDiv.textContent = 'תשובה נכונה! כל הכבוד!';
@@ -148,6 +158,7 @@
 
                 // הצגת חד הקרן וחגיגות
                 unicornImage.style.display = 'block';
+                cheerMessage.style.display = 'block';
 
                 // הפעלת צליל מחיאות כפיים
                 clapSound.currentTime = 0; // מתחיל מהתחלה
@@ -167,6 +178,7 @@
     </script>
 </body>
 </html>
+
 
 
 
