--- a/index.html
+++ b/index.html
@@ -72,12 +72,6 @@
             width: 200px;
             margin-top: 20px;
         }
-        #cheer-message {
-            font-size: 2rem;
-            color: green;
-            display: none;
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
@@ -88,21 +82,17 @@
         <div class="answers" id="answers"></div>
         <div class="result" id="result"></div>
         <img id="unicorn-celebration" src="https://i.imgur.com/eJgX2ft.png" alt="חגיגת חד קרן">
-        <div id="cheer-message">כל הכבוד! תמשיכי ככה, אלופה שלי! 🦄✨</div>
     </div>
 
-    <!-- קבצי אודיו -->
+    <!-- קובץ אודיו של מחיאות כפיים -->
     <audio id="clap-sound" src="https://www.soundjay.com/human/applause-01.mp3"></audio>
-    <audio id="cheer-sound" src="https://www.soundjay.com/human/cheering-crowd-01.mp3"></audio>
 
     <script>
         let num1, num2, operation, correctAnswer;
 
         function generateQuestion() {
             const unicornImage = document.getElementById('unicorn-celebration');
-            const cheerMessage = document.getElementById('cheer-message');
             unicornImage.style.display = 'none'; // מסתירים את חד הקרן בתחילת שאלה חדשה
-            cheerMessage.style.display = 'none'; // מסתירים את ההודעה
 
             do {
                 num1 = Math.floor(Math.random() * 6); // מספר בין 0 ל-5
@@ -150,9 +140,7 @@
         function checkAnswer(selectedAnswer) {
             const resultDiv = document.getElementById('result');
             const clapSound = document.getElementById('clap-sound');
-            const cheerSound = document.getElementById('cheer-sound');
             const unicornImage = document.getElementById('unicorn-celebration');
-            const cheerMessage = document.getElementById('cheer-message');
 
             if (selectedAnswer === correctAnswer) {
                 resultDiv.textContent = 'תשובה נכונה! כל הכבוד!';
@@ -160,21 +148,17 @@
 
                 // הצגת חד הקרן וחגיגות
                 unicornImage.style.display = 'block';
-                cheerMessage.style.display = 'block';
 
-                // הפעלת צליל מחיאות כפיים וקריאות עידוד
-                clapSound.currentTime = 0;
-                cheerSound.currentTime = 0;
+                // הפעלת צליל מחיאות כפיים
+                clapSound.currentTime = 0; // מתחיל מהתחלה
                 clapSound.play();
-                cheerSound.play();
             } else {
                 resultDiv.textContent = `טעות. התשובה הנכונה היא ${correctAnswer}.`;
                 resultDiv.style.color = 'red';
             }
 
             setTimeout(() => {
-                clapSound.pause();
-                cheerSound.pause();
+                clapSound.pause(); // עוצר את הצליל לאחר 10 שניות
                 generateQuestion();
             }, 10000); // שאלה חדשה אחרי 10 שניות
         }
@@ -183,6 +167,7 @@
     </script>
 </body>
 </html>
+
 
 
 
