--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
 </head>
 <body>
     <h1>משחק חיבור וחיסור</h1>
-    <img src="https://i.imgur.com/eJgX2ft.png" alt="חד קרן">
+    <img src="unicorn1.png" alt="חד קרן">
     <div class="container">
         <div class="question" id="question"></div>
         <div class="answers" id="answers"></div>
         <div class="result" id="result"></div>
-        <img id="unicorn-celebration" src="https://i.imgur.com/eJgX2ft.png" alt="חגיגת חד קרן">
+        <img id="unicorn-celebration" src="unicorn2.png" alt="חגיגת חד קרן">
     </div>
 
     <!-- קובץ אודיו של מחיאות כפיים -->
-    <audio id="clap-sound" src="https://www.soundjay.com/human/applause-01.mp3"></audio>
+    <audio id="clap-sound" src="clapping.mp3"></audio>
 
     <script>
         let num1, num2, operation, correctAnswer;
@@ -167,6 +167,7 @@
     </script>
 </body>
 </html>
+
 
 
 
