--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             background-color: #ff1493;
             transform: scale(1.1);
         }
-        .hint {
-            font-size: 1.8rem;
+        .hint-display {
+            font-size: 2.5rem;
+            color: #333;
             margin-top: 20px;
-            color: #555;
         }
         .result {
             margin-top: 30px;
@@ -77,10 +77,17 @@
             width: 200px;
             margin-top: 20px;
         }
-        .hint-display {
+        button#hint {
             font-size: 2rem;
-            color: #333;
-            margin-top: 20px;
+            padding: 15px 30px;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        button#hint:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -90,15 +97,15 @@
     <div class="container">
         <div class="question" id="question"></div>
         <div class="answers" id="answers"></div>
-        <button onclick="showHint()">רמז</button>
+        <button id="hint" onclick="showHint()">רמז</button>
         <div class="hint-display" id="hint-display"></div>
         <div class="result" id="result"></div>
         <div id="unicorn-celebration">
-            <img src="unicorn1.png" alt="חד קרן">
-            <img src="unicorn2.png" alt="חד קרן">
+            <img src="unicorn2.png" alt="חגיגת חד קרן">
+            <img src="unicorn3.png" alt="חגיגת חד קרן">
         </div>
     </div>
-    <img src="unicorn3.png" alt="חד קרן">
+    <img src="unicorn4.png" alt="חד קרן">
 
     <!-- קובץ אודיו של מחיאות כפיים -->
     <audio id="clap-sound" src="clapping.mp3"></audio>
@@ -183,7 +190,7 @@
 
         function showHint() {
             const hintDisplay = document.getElementById('hint-display');
-            let hint = `מספר ראשון: ${'🖐️'.repeat(num1)}<br>מספר שני: ${'🖐️'.repeat(num2)}`;
+            const hint = `מספר ראשון: ${'🖐️'.repeat(num1)}<br>מספר שני: ${'🖐️'.repeat(num2)}`;
             hintDisplay.innerHTML = hint;
         }
 
@@ -191,6 +198,7 @@
     </script>
 </body>
 </html>
+
 
 
 
