--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <h1>משחק חיבור וחיסור</h1>
-    <img src="unicorn1.png" alt="חד קרן">
+    <img src="unicorn.png" alt="חדי קרן"/>
     <div class="container">
         <div class="question" id="question"></div>
         <div class="answers" id="answers"></div>
@@ -101,14 +101,8 @@
         <div class="hint-display" id="hint-display"></div>
         <div class="result" id="result"></div>
         <div id="unicorn-celebration">
-            <img src="unicorn2.png" alt="חגיגת חד קרן">
-            <img src="unicorn3.png" alt="חגיגת חד קרן">
         </div>
     </div>
-    <img src="unicorn4.png" alt="חד קרן">
-
-    <!-- קובץ אודיו של מחיאות כפיים -->
-    <audio id="clap-sound" src="clapping.mp3"></audio>
 
     <script>
         let num1, num2, operation, correctAnswer;
@@ -198,22 +192,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
