--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
     <h1>משחק חיבור וחיסור</h1>
-    <img src="unicorn.png" alt="חדי קרן"/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Unicorn_illustration.png/800px-Unicorn_illustration.png" alt="חדי קרן"/>
     <div class="container">
         <div class="question" id="question"></div>
         <div class="answers" id="answers"></div>
@@ -134,15 +134,15 @@
         </div>
         <div class="shop-container" id="shop-container">
             <div class="shop-item">
-                <img src="unicorn-doll.jpg" alt="בובת חד קרן">
+                <img src="https://example.com/unicorn-doll.jpg" alt="בובת חד קרן">
                 <p>בובת חד קרן</p>
             </div>
             <div class="shop-item">
-                <img src="stitch-doll.jpg" alt="בובת סטיץ׳">
+                <img src="https://example.com/stitch-doll.jpg" alt="בובת סטיץ׳">
                 <p>בובת סטיץ׳</p>
             </div>
             <div class="shop-item">
-                <img src="simba-doll.jpg" alt="בובת סימבה">
+                <img src="https://example.com/simba-doll.jpg" alt="בובת סימבה">
                 <p>בובת סימבה</p>
             </div>
         </div>
