--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: linear-gradient(to bottom, pink, purple, red, lightblue); /* רקע בצבעים ורוד, סגול, אדום ותכלת */
-            background-image: url('https://i.imgur.com/Vy6k5eJ.png'); /* רקע עם עננים */
-            background-size: cover;
+            background: linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet); /* רקע בצבעי הקשת */
             margin: 0;
             padding: 0;
             height: 100vh;
