--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
             font-weight: bold;
             color: #333;
         }
+        #hint {
+            font-size: 2.5rem; /* עדכון לגודל כפתור גדול יותר */
+            padding: 20px 40px;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        #hint:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
